this should hopefully address mobile visibility issues

--- a/ig/style.css
+++ b/ig/style.css
@@ -141,3 +141,8 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+@media only screen and (max-width: 768px) {
+	body {
+		transform: scale(0.65);
+	}
+}
